Closed Bug 1379046 Opened 7 years ago Closed 7 years ago

RenderFrameParent inconsistently uses the wrong LayerManager in XUL popups

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

In some cases, it uses the layer manager for the popup, but in others, it uses the layer manager for the top-level window that owns the popup.
Blocks: 1357486
Comment on attachment 8884142 [details] Bug 1379046: Use the correct LayerManager everywhere. https://reviewboard.mozilla.org/r/155064/#review160260 Looks sane to me
Attachment #8884142 - Flags: review?(bugmail) → review+
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: