Bug 1379046: Use the correct LayerManager everywhere. r=kats

MozReview-Commit-ID: 4eTQxraxGK0

--HG--
extra : rebase_source : 09fc568235dd6dcf66bdf07d62b37aa7b1bc5336